--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
    "outputs": [],
    "source": [
     "# Features to use for training\n",
-    "features = ['year','make','model', 'miles', 'trim']\n"
+    "features = ['year','make','model', 'miles', 'trim']"
    ]
   },
   {
@@ -593,7 +593,7 @@
    "outputs": [],
    "source": [
     "# Target variable\n",
-    "target = 'sold_price'\n"
+    "target = 'sold_price'"
    ]
   },
   {
@@ -604,7 +604,7 @@
    "source": [
     "# Separating features and target\n",
     "x = df[features]\n",
-    "y = df[target]\n"
+    "y = df[target]"
    ]
   },
   {
@@ -614,7 +614,7 @@
    "outputs": [],
    "source": [
     "# Splitting into train and test sets\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)\n"
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -653,9 +653,7 @@
    "source": [
     "# Preprocessing pipeline for numerical and categorical data\n",
     "numerical_features = ['year', 'miles']\n",
-    "categorical_features = ['make','model','trim']\n",
-    "\n",
-    "# "
+    "categorical_features = ['make','model','trim']\n"
    ]
   },
   {
@@ -1143,7 +1141,7 @@
    "outputs": [],
    "source": [
     "# Predictions\n",
-    "y_pred = model.predict(x_test)\n"
+    "y_pred = model.predict(x_test)"
    ]
   },
   {
@@ -1191,7 +1189,7 @@
     }
    ],
    "source": [
-    "print(f'Root Mean Squared Error (RMSE): {rmse}')\n"
+    "print(f'Root Mean Squared Error (RMSE): {rmse}')"
    ]
   },
   {
@@ -1203,7 +1201,7 @@
     "numerical_features = ['year', 'miles']\n",
     "categorical_features = ['make','model','trim']\n",
     "# Features to use for training\n",
-    "features = ['year','make','model', 'miles', 'trim']\n"
+    "features = ['year','make','model', 'miles', 'trim']"
    ]
   },
   {
@@ -1229,9 +1227,7 @@
     "        'miles': [miles],\n",
     "        'trim': [trim]\n",
     "    })\n",
-    "    return user_data\n",
-    "\n",
-    "\n"
+    "    return user_data\n"
    ]
   },
   {
